--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "derby-expressions",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --recursive test --bail --colors --reporter spec --debug"
   },
   "author": "",
-  "license": "BSD-2-Clause",
+  "license": "MIT",
   "dependencies": {
     "esprima-derby": "~1.1.0-dev"
+  },
+  "devDependencies": {
+    "racer": "~0.5.11",
+    "expect.js": "~0.2.0"
   }
 }
