initial implementation of serialization

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "esprima-derby": "~1.1.0-dev"
+  , "serialize-object": "~0.0.2"
   },
   "devDependencies": {
     "expect.js": "~0.2.0"
