define derby templates in this module

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "esprima-derby": "~1.1.0-dev"
   , "serialize-object": "~0.0.2"
+  , "saddle": "~0.1.0"
   },
   "devDependencies": {
     "expect.js": "~0.2.0"
