--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "derby-templates",
   "version": "0.3.7",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "./node_modules/.bin/mocha && ./node_modules/.bin/jshint lib/*.js test/*.js"
@@ -10,7 +9,7 @@
     "type": "git",
     "url": "git://github.com/derbyjs/derby-templates.git"
   },
-  "author": "",
+  "author": "Nate Smith",
   "license": "MIT",
   "dependencies": {
     "saddle": "^0.6.0",
@@ -23,5 +22,10 @@
     "expect.js": "~0.3.1",
     "jshint": "~2.4.4",
     "mocha": "~1.17.1"
-  }
+  },
+  "homepage": "https://github.com/derbyjs/derby-templates#readme",
+  "directories": {
+    "test": "test"
+  },
+  "description": ""
 }
